[gd_scene load_steps=14 format=3 uid="uid://biqcg18v7bo8u"]

[ext_resource type="Script" uid="uid://dahxhxblhsnmw" path="res://main_menu.gd" id="1_cqjrg"]
[ext_resource type="PackedScene" uid="uid://bmjy206pr2ng6" path="res://game.tscn" id="2_e2xy7"]
[ext_resource type="Texture2D" uid="uid://cc42cxlp2prpb" path="res://Main BG.png" id="3_fimr5"]
[ext_resource type="Texture2D" uid="uid://bdxe8e1p7sj84" path="res://Pixel Art _FLOPPY FLOP_ Title.png" id="4_u7cqb"]
[ext_resource type="Texture2D" uid="uid://bxao7aonxw2nj" path="res://play button.png" id="5_afec1"]
[ext_resource type="Texture2D" uid="uid://c5y5dd1d3r0kk" path="res://sound on.png" id="6_31qfy"]
[ext_resource type="Texture2D" uid="uid://boogelndqjera" path="res://save off.png" id="7_qie43"]
[ext_resource type="AudioStream" uid="uid://bkeanry7u6bci" path="res://game sfx/startsf.ogg" id="8_fimr5"]
[ext_resource type="AudioStream" uid="uid://bufo0n7hehykl" path="res://game sfx/mute.ogg" id="9_u7cqb"]
[ext_resource type="FontFile" uid="uid://exl1nyiawgpp" path="res://Minecraft.ttf" id="10_31qfy"]
[ext_resource type="Texture2D" uid="uid://b0jiow2ywm5w8" path="res://game sfx/cross red.png" id="11_31qfy"]
[ext_resource type="Texture2D" uid="uid://btbtao51y02v0" path="res://how to p.png" id="12_qie43"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61cf8"]
bg_color = Color(1, 0.305882, 0.447059, 0.858824)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.819608, 0.623529, 0.552941, 1)
corner_radius_top_left = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cqjrg")
main_game_scene = ExtResource("2_e2xy7")
icon_sound_on = ExtResource("6_31qfy")
icon_sound_off = ExtResource("7_qie43")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1609.0
offset_top = 55.0
offset_right = 2633.0
offset_bottom = 1716.0
rotation = 1.5708
texture = ExtResource("3_fimr5")
stretch_mode = 6

[node name="TitleBar" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 529.0
offset_top = 127.0
offset_right = 3009.0
offset_bottom = 1663.0
scale = Vector2(0.2, 0.17)
mouse_filter = 2
texture = ExtResource("4_u7cqb")

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.5
offset_left = 718.0
offset_top = 600.0
offset_right = 2254.0
offset_bottom = 1604.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("5_afec1")

[node name="SoundButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 732.0
offset_top = 480.0
offset_right = 751.0
offset_bottom = 497.0
scale = Vector2(4, 4)
action_mode = 0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(778, 554)
scale = Vector2(1, 0.9)
zoom = Vector2(0.7, 0.7)

[node name="StartSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fimr5")

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_u7cqb")

[node name="HowToPlayPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 382.0
offset_top = 291.0
offset_right = 1174.0
offset_bottom = 729.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61cf8")

[node name="RichTextLabel" type="RichTextLabel" parent="HowToPlayPanel"]
layout_mode = 0
offset_left = 6.0
offset_right = 789.0
offset_bottom = 457.0
theme_override_fonts/normal_font = ExtResource("10_31qfy")
bbcode_enabled = true
text = "[center][b][u]STORY TIME[/u][/b][/center]

You are a brave little bug trapped inside a failing floppy disk. After a failed attempt to save [b]Big Cat Pictures[/b], the disk is rapidly corrupting from above, spreading dangerous [color=cyan]corruption paths[/color] that threaten to destroy all the data inside.

The corruption is slowly creeping downward, forcing you to keep moving forward—if you fall behind, the corruption will catch you and end your run.

Your mission: collect scattered pieces of valuable data before the corruption overtakes everything. Avoid the spreading corruption (marked in red), and gather at least [b]>0 KB[/b] of data fragments. Only then can you reach the final safe tile and escape the dying disk.

[b][color=green]But beware—the corruption spreads faster than you think! You must move quickly and smartly.[/color][/b]

[center][i]Controls to survive:[/i][/center]  
[b]W[/b] - Jump  
[b]A[/b] - Move Left  
[b]D[/b] - Move Right  

[center][color=blue][b]CAN YOU SAVE AT LEAST 50 KB OF DATA AND ESCAPE BEFORE THE FLOPPY DISK CRASHES FOREVER?[/b][/color][/center]

"

[node name="CloseButton" type="TextureButton" parent="HowToPlayPanel"]
layout_mode = 0
offset_left = 774.0
offset_top = -14.0
offset_right = 1274.0
offset_bottom = 486.0
scale = Vector2(0.07, 0.07)
action_mode = 0
texture_normal = ExtResource("11_31qfy")

[node name="HowToPlayButton" type="TextureButton" parent="."]
layout_mode = 0
anchor_left = 17.35
anchor_top = 19.025
anchor_right = 22.47
anchor_bottom = 22.43
offset_right = 819.2
offset_bottom = 544.8
scale = Vector2(0.2, 0.2)
action_mode = 0
texture_normal = ExtResource("12_qie43")
texture_pressed = ExtResource("12_qie43")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="HowToPlayPanel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
